[package]
name = "tus"
version = "1.0.0"
edition = "2018"
authors = ["Richo Healey <richo@stripe.com>"]
description = "rust implementation of TUS"
repository = "https://github.com/richo/tus"
license = "MIT"

[dependencies]
reqwest = "0.9.22"
failure = "0.1.6"
lazy_static = "1.4.0"
url = "2.1.0"

[dev-dependencies]
rand = "0.7.2"
tempfile = "3.1.0"
