[package]
name = "tus"
version = "1.0.0"
edition = "2018"
authors = ["Richo Healey <richo@stripe.com>"]
description = "rust implementation of TUS"
repository = "https://github.com/richo/tus"
license = "MIT"

[dependencies]
reqwest = "0.11.22"
failure = "0.1.8"
lazy_static = "1.4.0"
url = "2.5.0"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.8.1"
